# cndk8

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  cndk8.secret.asc  run_telegram_bot
.github/workflows/: rust.yml
applications/telegram/: Cargo.toml
applications/telegram/src/: main.rs
containers/: Containerfile
containers/webhook/webhook-listener-service/: Containerfile
crates/cndk8-managers/: Cargo.toml
crates/cndk8-managers/src/: lib.rs  second_brain_manager.rs
duplicate_detection/: Cargo.toml
duplicate_detection/src/: lib.rs
handlers/: Cargo.toml
handlers/src/: urlhandlers.rs
lab/rest_client/: .gitignore  CMakeLists.txt  Cargo.toml  build.sh
lab/rest_client/client/: CMakeLists.txt  Cargo.toml
lab/rest_client/client/src/: lib.rs
lab/rest_client/gui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp
src/: main.rs  rng.rs
telegram/: Cargo.toml
telegram/src/: main.rs
