[package]
name = "client"
version = "0.1.0"
edition = "2021"
authors = ["Michael Bryan <michaelfbryan@gmail.com>", "Santiago Zarate <santiago@zarate.co>"]
description = "The business logic for a REST client"
repository = "https://github.com/Michael-F-Bryan/rust-ffi-guide"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
crate-type = ["cdylib"]

[workspace]
